# Voxel-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/sandbox/: main.cpp
assets/data/core/: blocks.json  items.json  recipes.json  terrain.json
assets/shaders/: cluster.vert  cluster_mesh_classify.comp  fluid_sim.comp  mesh_face_classify.comp  sky.frag  sky.vert  terrain_generate.comp  ui.vert  voxel.frag  voxel.vert  voxel_chunk.vert  voxel_cull.comp
docs/: advanced_voxel_engine_architecture.md  engine_modules.md  gpu_fluid_sim_design.md  gpu_hybrid_meshing_and_terrain_design.md  lod_persistence_policy.md  space_design_bible.md
include/voxel/app/: ConsoleMainMenu.hpp
include/voxel/automation/: KineticNetwork.hpp  NetworkGraph.hpp
include/voxel/core/: Application.hpp  EventBus.hpp  JobSystem.hpp  Logger.hpp  Math.hpp  MpscQueue.hpp  Paths.hpp  RuntimeStats.hpp  Types.hpp
include/voxel/data/: BlockRegistry.hpp  CoreContentIds.hpp  Identifier.hpp  ItemRegistry.hpp  RecipeRegistry.hpp  Registry.hpp  RegistryLoader.hpp
include/voxel/ecs/: Components.hpp  SimulationSystem.hpp
include/voxel/inventory/: Inventory.hpp  InventorySerialization.hpp
include/voxel/magic/: MagicSystem.hpp
include/voxel/network/: NetworkSystem.hpp
include/voxel/physics/: PhysicsSystem.hpp
include/voxel/platform/: GlfwWindow.hpp  IWindow.hpp
include/voxel/player/: CreativeHotbar.hpp  PlayerController.hpp  PlayerSpawnResolver.hpp
include/voxel/render/: BufferArena.hpp  ClusterRenderer.hpp  DebugCamera.hpp  DebugOverlay.hpp  IRenderer.hpp  MaterialTable.hpp  RenderGraph.hpp  VulkanRenderer.hpp
include/voxel/render/meshing/: BlockRenderCatalog.hpp  ChunkMeshCache.hpp  ClipmapRegionMesher.hpp  ClusterGpuMeshing.hpp  ClusterMesh.hpp  ClusterMeshDiskCache.hpp  ClusterMesher.hpp  GreedyMesher.hpp  HybridMeshingGpuSystem.hpp  RegionMesher.hpp
include/voxel/save/: ISaveStore.hpp  PlayerInventorySaveService.hpp  PlayerStateSaveService.hpp  RegionFileStore.hpp  SaveCoordinator.hpp  WorldRegistry.hpp  WorldSaveService.hpp
include/voxel/world/: BitPackedArray.hpp  BlockCollisionCatalog.hpp  BlockEditQueue.hpp  BlockEditor.hpp  BlockEntityBehavior.hpp  BlockLightCatalog.hpp  BlockState.hpp  Chunk.hpp  ChunkConstants.hpp  ChunkDirtyQueue.hpp  ChunkFluidData.hpp  ChunkJobMailbox.hpp  ChunkLightData.hpp  ChunkManager.hpp  ChunkPipeline.hpp  ChunkStreamer.hpp  CoordinateUtils.hpp  Coordinates.hpp  CoreBehaviors.hpp  FlatTerrainGenerator.hpp  FluidDirtyQueue.hpp  FluidGpuSystem.hpp  FluidSystem.hpp  IChunkGenerator.hpp  LightPropagator.hpp  Lod.hpp  NoiseTerrainGenerator.hpp  Palette.hpp  Raycast.hpp  SpaceEnvironment.hpp  TerrainColumnPrepass.hpp  TerrainDefinitionRegistry.hpp  TerrainPipeline.hpp  WorldDelta.hpp  WorldDescriptor.hpp
src/voxel/app/: ConsoleMainMenu.cpp
src/voxel/automation/: NetworkGraph.cpp
src/voxel/core/: Application.cpp  JobSystem.cpp  Logger.cpp  Math.cpp  Paths.cpp
src/voxel/data/: BlockRegistry.cpp  CoreContentIds.cpp  ItemRegistry.cpp
src/voxel/ecs/: SimulationSystem.cpp
src/voxel/inventory/: InventorySerialization.cpp
src/voxel/magic/: MagicSystem.cpp
src/voxel/physics/: PhysicsSystem.cpp
src/voxel/platform/: GlfwWindow.cpp
src/voxel/player/: CreativeHotbar.cpp  PlayerController.cpp  PlayerSpawnResolver.cpp
src/voxel/render/: ClusterRenderer.cpp  DebugCamera.cpp  DebugOverlay.cpp  MaterialTable.cpp  RenderGraph.cpp  VulkanRenderer.cpp
src/voxel/render/meshing/: BlockRenderCatalog.cpp  ChunkMeshCache.cpp  ClipmapRegionMesher.cpp  ClusterGpuMeshing.cpp  ClusterMeshDiskCache.cpp  ClusterMesher.cpp  GreedyMesher.cpp  HybridMeshingGpuSystem.cpp  RegionMesher.cpp
src/voxel/save/: PlayerStateSaveService.cpp  RegionFileStore.cpp  SaveCoordinator.cpp  WorldRegistry.cpp
src/voxel/world/: BlockEditQueue.cpp  BlockEntityBehavior.cpp  Chunk.cpp  ChunkDirtyQueue.cpp  ChunkFluidData.cpp  ChunkJobMailbox.cpp  ChunkLightData.cpp  ChunkManager.cpp  ChunkPipeline.cpp  ChunkStreamer.cpp  FluidDirtyQueue.cpp  FluidGpuSystem.cpp  FluidSystem.cpp  LightPropagator.cpp  NoiseTerrainGenerator.cpp  NoiseTerrainWorldShape.cpp  NoiseTerrainWorldShape.hpp  Raycast.cpp  SpaceEnvironment.cpp  TerrainColumnPrepass.cpp  TerrainDefinitionRegistry.cpp  TerrainPipeline.cpp  TerrainPipelineFoliage.cpp  TerrainPipelineStages.cpp  TerrainPipelineStructures.cpp
tests/smoke/: main.cpp
voxel/automation/: KineticNetwork.cpp
voxel/core/: Application.cpp  JobSystem.cpp  Logger.cpp  Math.cpp
voxel/data/: BlockRegistry.cpp  RecipeRegistry.cpp  RegistryLoader.cpp
voxel/ecs/: SimulationSystem.cpp
voxel/inventory/: Inventory.cpp
voxel/magic/: MagicSystem.cpp
voxel/network/: NetworkSystem.cpp
voxel/platform/: GlfwWindow.cpp
voxel/player/: CreativeHotbar.cpp  PlayerController.cpp  PlayerSpawnResolver.cpp
voxel/render/: BufferArena.cpp  DebugCamera.cpp  MaterialTable.cpp  VmaAllocator.cpp  VulkanRenderer.cpp
voxel/render/meshing/: ChunkMeshCache.cpp  GreedyMesher.cpp
voxel/save/: PlayerInventorySaveService.cpp  RegionFileStore.cpp  WorldSaveService.cpp
voxel/world/: BitPackedArray.cpp  BlockEditor.cpp  BlockEntityBehavior.cpp  BlockLightCatalog.cpp  Chunk.cpp  ChunkDirtyQueue.cpp  ChunkJobMailbox.cpp  ChunkLightData.cpp  ChunkManager.cpp  ChunkPipeline.cpp  ChunkStreamer.cpp  CoreBehaviors.cpp  FlatTerrainGenerator.cpp  LightPropagator.cpp  NoiseTerrainGenerator.cpp  Raycast.cpp  TerrainColumnPrepass.cpp  WorldDelta.cpp
